fix(index): :lipstick: fix overflow on small screens

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   height: 100vh;
   min-height: 100vh;
   max-height: 100vh;
   padding: 0;
-}
+} */
